# work-slices-old

./: README.md  com.github.colinkiama.work-slices.yml  meson.build
data/: com.github.colinkiama.work-slices.appdata.xml  com.github.colinkiama.work-slices.desktop
src/: Application.vala  MainWindow.vala  meson.build
src/Enums/: SessionType.vala  TimerRequest.vala  TimerStatus.vala
src/Helpers/: TimerHelpers.vala
src/Model/: Pomodoro.vala  Session.vala  SessionLengths.vala  Timer.vala
src/Services/: TimerService.vala
src/View/: TimerView.vala
src/ViewModel/: TimerViewModel.vala
