sources = files([
    'Application.vala',
    'MainWindow.vala',
    'Enums/SessionType.vala',
    'Enums/TimerRequest.vala',
    'Enums/TimerStatus.vala',
    'Model/Session.vala',
    'Model/SessionLengths.vala',
    'Model/Pomodoro.vala',
    'Services/TimerService.vala',
    'View/TimerView.vala',
    'ViewModel/TimerViewModel.vala',
    'Helpers/TimerHelpers.vala',
])
